--- a/force-app/test/default/IoradPlayerControllerTests.cls
+++ b/force-app/test/default/IoradPlayerControllerTests.cls
@@ -7,7 +7,7 @@ private class IoradPlayerControllerTests {
             Schema.DescribeSObjectResult detail = item.getDescribe();
             if (detail != null && detail.getName().endsWith('__kav')) {
                 //Creating a new sObject
-                sObject sObj = Schema.getGlobalDescribe().get(detail.getName()).newSObject() ;
+                sObject sObj = Schema.getGlobalDescribe().get(detail.getName()).newSObject();
                 sObj.put('Title' , title);
                 sObj.put('UrlName' , urlName);
                 sObj.put('Summary' , summary);
@@ -15,7 +15,12 @@ private class IoradPlayerControllerTests {
             }
         }
 
-        return null;
+        sObject sObj = new Iorad_Tutorial__c();
+        sObj.put('Name' , title);
+        sObj.put('UrlName__c' , urlName);
+        sObj.put('Summary__c' , summary);
+ 
+        return sObj;
     }
 
     @isTest static void testConstructor() {
@@ -32,20 +37,6 @@ private class IoradPlayerControllerTests {
     	System.assertEquals(article.Id, demo.article.get('Id'));
     }
 
-    @isTest static void testStandardControllerConstructor() {
-    	SObject article = generateArticle('test 2', 'test-2', '');
-        if (article != null) {
-            insert article;
-        }
-
-    	Test.setCurrentPage(Page.IoradPlayerPage);   	
-    	ApexPages.currentPage().getParameters().put('id', article.Id);
-
-    	IoradPlayerController demo = new IoradPlayerController(new ApexPages.KnowledgeArticleVersionStandardController(article));        
-        System.assertEquals(article.Id, ApexPages.currentPage().getParameters().get('id'));
-    	System.assertEquals(article.Id, demo.article.Id);
-    }
-
     @isTest static void testIoradLink() {
         String link = 'https://iorad.com/player';
     	SObject article = generateArticle('test 2', 'test-2', '<a href="' + link + '">test link</a>');
@@ -53,7 +44,10 @@ private class IoradPlayerControllerTests {
             insert article;
         }
 
-    	IoradPlayerController demo = new IoradPlayerController(new ApexPages.KnowledgeArticleVersionStandardController(article));
+        Test.setCurrentPage(Page.IoradPlayerPage);   	
+    	ApexPages.currentPage().getParameters().put('id', article.Id);
+
+    	IoradPlayerController demo = new IoradPlayerController();
         System.assertEquals(link, demo.player);
     }
 
